Fixed spacing on desc

--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ a:active {
 .desc {
     font-size: 0.5em;
     margin-left: 15px;
-    line-height: 12px;
+    margin-top: -24px;
 }
 
 .vertbar {
